fix(navbar): fix spacing for mac fullscreen

--- a/src/widgets/navbar/ui/Navbar/Navbar.module.scss
+++ b/src/widgets/navbar/ui/Navbar/Navbar.module.scss
@@ -24,6 +24,10 @@
   left: 88px;
 }
 
+.collapsed.fullscreen.mac .inner {
+  left: 36px;
+}
+
 .history {
   margin-left: auto;
   display: flex;
